--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,19 @@
         <item name="android:statusBarColor">@color/light_green</item>
         <item name="colorAccent">@color/yellow</item>
     </style>
+
+    <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
+
+    <item name="android:typeface">monospace</item>
+    <item name="android:background">@drawable/bg_ln_bottom_address</item>
+</style>
+
+<style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
+<item name="android:windowIsFloating">false</item>
+<item name="android:typeface">monospace</item>
+<item name="bottomSheetStyle">@style/BottomSheet</item>
+</style>
+
+<style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog" />
+
 </resources>
