--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -176,6 +176,7 @@
                     android:orientation="vertical"
                     android:background="@drawable/bg_account_box">
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_Address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_person_button"
