--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -9,6 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:id="@+id/ln_item_address"
     android:layout_marginBottom="10dp"
     android:layout_marginTop="10dp"
     android:background="@drawable/bg_address_item"
