--- a/app/src/main/res/layout/fragment_address_dialog.xml
+++ b/app/src/main/res/layout/fragment_address_dialog.xml
@@ -7,14 +7,15 @@
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.AddressDialogViewModel" />
     </data>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/bg_ln_bottom_address"
         android:paddingHorizontal="18dp"
-        tools:context=".uicontroler.fragment.ActivityDialogFragment"
-       >
+        tools:context=".uicontroler.fragment.ActivityDialogFragment">
         <TextView
             android:layout_width="wrap_content"
             android:layout_marginTop="25dp"
