--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_main"
-        tools:context=".uicontroler.fragment.PersionFragment">
+        tools:context=".uicontroler.fragment.PersonFragment">
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -88,7 +88,7 @@
         </com.google.android.material.appbar.AppBarLayout>
             <LinearLayout
                 android:id="@+id/ln_havingAccount"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -185,7 +185,7 @@
                         android:textAlignment="textStart"
                         android:textAllCaps="false"
                         android:text="   Address manager"
-                        android:textSize="16dp"
+                        android:textSize="16sp"
                         android:textColor="@color/person_color"/>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -237,6 +237,7 @@
                         android:layout_height="1dp"
                         android:layout_marginHorizontal="20dp"/>
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/signOut"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_person_button"
@@ -253,6 +254,7 @@
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/ln_noAccount"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
