--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -1,14 +1,282 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".uicontroler.fragment.VerifyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.example.aposs_buyer.viewmodel.SignUpViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:context=".uicontroler.fragment.VerifyFragment">
 
-</FrameLayout>
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/white"
+            app:elevation="0dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textAllCaps="true"
+                    android:textColor="@color/light_green"
+                    android:textSize="75sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="-10dp"
+                    android:text="@string/slogan"
+                    android:textAllCaps="true"
+                    android:textColor="@color/dark_pray" />
+            </LinearLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/image"
+            android:scaleX="1.1"
+            android:scaleY="1.1"
+            android:src="@drawable/ic_sign_up_success"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="50dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/please_verify"
+                    android:textColor="@color/white"
+                    android:textSize="27sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/your"
+                        android:textColor="@color/white"
+                        android:textSize="27sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="@string/cell_number"
+                        android:textColor="@color/dark_blue"
+                        android:textSize="27sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                app:cardElevation="5dp"
+                android:layout_marginTop="15dp"
+                app:cardCornerRadius="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:background="@color/white">
+
+                <LinearLayout
+                    android:gravity="center_horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:textSize="17sp"
+                        android:gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/verify_content_text" />
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:text="@{viewModel.cellNumber}"
+                            android:textColor="@color/dark_blue"
+                            android:textStyle="bold"
+                            android:textSize="17sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textSize="17sp"
+                            android:layout_marginStart="5dp"
+                            android:text="@string/via_sms_message"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/change"
+                            android:textAllCaps="true"
+                            android:text="@string/change"
+                            android:textColor="@color/yellow"
+                            android:textStyle="bold"
+                            android:textSize="17sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textSize="17sp"
+                            android:layout_marginStart="5dp"
+                            android:text="@string/your_number"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <androidx.cardview.widget.CardView
+                    android:layout_marginHorizontal="5dp"
+                    app:cardCornerRadius="5dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp">
+                    <EditText
+                        android:id="@+id/firstVerify"
+                        android:nextFocusDown="@id/secondVerify"
+                        android:text="@={viewModel.verifyString[0]}"
+                        android:afterTextChanged="@{() -> viewModel.notifyVerifyChange()}"
+                        android:gravity="center"
+                        android:textColor="@color/dark_blue"
+                        android:textStyle="bold"
+                        android:padding="0dp"
+                        android:inputType="number"
+                        android:maxLines="1"
+                        android:maxEms="1"
+                        android:maxLength="1"
+                        android:background="@color/white"
+                        android:textSize="27sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_marginHorizontal="5dp"
+                    app:cardCornerRadius="5dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp">
+                    <EditText
+                        android:nextFocusDown="@id/thirdVerify"
+                        android:id="@+id/secondVerify"
+                        android:text="@={viewModel.verifyString[1]}"
+                        android:afterTextChanged="@{() -> viewModel.notifyVerifyChange()}"
+                        android:inputType="number"
+                        android:maxLines="1"
+                        android:maxEms="1"
+                        android:maxLength="1"
+                        android:gravity="center"
+                        android:textColor="@color/dark_blue"
+                        android:textStyle="bold"
+                        android:padding="0dp"
+                        android:background="@color/white"
+                        android:textSize="27sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_marginHorizontal="5dp"
+                    app:cardCornerRadius="5dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp">
+                    <EditText
+                        android:nextFocusDown="@id/lastVerify"
+                        android:id="@+id/thirdVerify"
+                        android:text="@={viewModel.verifyString[2]}"
+                        android:afterTextChanged="@{() -> viewModel.notifyVerifyChange()}"
+                        android:gravity="center"
+                        android:textColor="@color/dark_blue"
+                        android:textStyle="bold"
+                        android:padding="0dp"
+                        android:inputType="number"
+                        android:maxLines="1"
+                        android:maxEms="1"
+                        android:maxLength="1"
+                        android:background="@color/white"
+                        android:textSize="27sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_marginHorizontal="5dp"
+                    app:cardCornerRadius="5dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp">
+                    <EditText
+                        android:id="@+id/lastVerify"
+                        android:afterTextChanged="@{() -> viewModel.notifyVerifyChange()}"
+                        android:text="@={viewModel.verifyString[3]}"
+                        android:gravity="center"
+                        android:textColor="@color/dark_blue"
+                        android:textStyle="bold"
+                        android:padding="0dp"
+                        android:inputType="number"
+                        android:maxLines="1"
+                        android:maxEms="1"
+                        android:maxLength="1"
+                        android:background="@color/white"
+                        android:textSize="27sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+            <TextView
+                android:textStyle="bold"
+                android:textColor="@color/dark_blue"
+                android:text="@string/resend_otp"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
