--- a/app/src/main/res/layout/fragment_check_out_dialog.xml
+++ b/app/src/main/res/layout/fragment_check_out_dialog.xml
@@ -107,6 +107,7 @@
                 android:textSize="18dp" />
         </RelativeLayout>
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_place_order"
             android:layout_marginTop="15dp"
             android:background="@drawable/bg_confirm_check_out"
             android:layout_width="match_parent"
