--- a/app/src/main/res/layout/fragment_available_favorite.xml
+++ b/app/src/main/res/layout/fragment_available_favorite.xml
@@ -47,6 +47,7 @@
         </LinearLayout>
         <!-- TODO: Update blank fragment layout -->
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginHorizontal="20dp"
             android:id="@+id/allItems"
             favoriteData="@{viewModel.availableProduct}"
             android:layout_width="match_parent"
