--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -194,6 +194,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="200dp">
                 <androidx.recyclerview.widget.RecyclerView
+                    android:layout_marginHorizontal="20dp"
                     android:id="@+id/rc_category"
                     android:layout_width="match_parent"
                     detailCategories="@{viewModel.lstCategory}"
