--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -394,6 +394,7 @@
                             </com.google.android.material.textfield.TextInputLayout>
 
                             <ImageView
+                                android:id="@+id/notification"
                                 android:layout_width="38dp"
                                 android:layout_height="38dp"
                                 android:layout_alignParentEnd="true"
