--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -39,13 +39,16 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="10dp" />
         <LinearLayout
+            android:layout_gravity="center_vertical"
             android:layout_centerVertical="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:orientation="vertical">
             <TextView
-                android:layout_width="wrap_content"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginEnd="40dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{cartItem.name}"
                 android:textSize="12dp"
