--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,118 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:background="@color/back_ground"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".uicontroler.fragment.OrderFragment">
-
-    <com.google.android.material.appbar.AppBarLayout
+<layout>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.aposs_buyer.viewmodel.OrderViewModel" />
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/back_ground"
-        android:text="@string/app_name"
-        android:theme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_constraintTop_toTopOf="parent"
-        app:liftOnScroll="true">
+        android:background="@color/back_ground"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".uicontroler.fragment.OrderFragment">
 
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@drawable/bg_card"
-            app:layout_collapseMode="pin">
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/back_ground"
+            android:text="@string/app_name"
+            android:theme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_constraintTop_toTopOf="parent"
+            app:liftOnScroll="true">
 
-
-            <LinearLayout
+            <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="20dp"
-                android:gravity="center|top"
-                android:orientation="vertical"
-                android:paddingBottom="15dp">
+                android:layout_height="150dp"
+                android:background="@drawable/bg_card"
+                app:layout_collapseMode="pin">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:contentDescription="@string/image"
-                    android:src="@drawable/ic_logo" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="20dp"
+                    android:gravity="center|top"
+                    android:orientation="vertical"
+                    android:paddingBottom="15dp">
 
                     <ImageView
-                        android:id="@+id/back"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
+                        android:layout_marginTop="15dp"
                         android:contentDescription="@string/image"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_back_white" />
+                        android:src="@drawable/ic_logo" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="@string/my_orders"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:textSize="30sp"
-                        android:textStyle="bold" />
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true">
+                        android:layout_marginTop="10dp">
 
                         <ImageView
-                            android:id="@+id/cart"
+                            android:id="@+id/back"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
-                            android:layout_marginEnd="20dp"
                             android:contentDescription="@string/image"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/ic_cart_white"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent" />
+                            android:src="@drawable/ic_back_white" />
 
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="10dp"
-                            android:layout_height="10dp"
-                            android:background="@color/red"
-                            android:backgroundTint="@color/red"
-                            app:cardCornerRadius="10dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="@string/my_orders"
+                            android:textAllCaps="false"
+                            android:textColor="@color/white"
+                            android:textSize="30sp"
+                            android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:autoSizeMinTextSize="7sp"
-                                android:gravity="center"
-                                android:text="@string/defaultCartNumber"
-                                android:textColor="@color/white"
-                                android:textSize="7sp"
-                                tools:ignore="SmallSp,SpUsage" />
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="27dp"
+                            android:layout_height="27dp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true">
 
-                        </androidx.cardview.widget.CardView>
+                            <ImageView
+                                android:id="@+id/cart"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginEnd="20dp"
+                                android:contentDescription="@string/image"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/ic_cart_white"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent" />
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </RelativeLayout>
-                <TextView
-                    android:textSize="16sp"
-                    android:textColor="@color/dark_pray"
-                    android:layout_marginTop="15dp"
-                    android:text="Tap to view detail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-        </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="10dp"
+                                android:layout_height="10dp"
+                                android:background="@color/red"
+                                android:backgroundTint="@color/red"
+                                app:cardCornerRadius="10dp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:autoSizeMinTextSize="7sp"
+                                    android:gravity="center"
+                                    android:text="@string/defaultCartNumber"
+                                    android:textColor="@color/white"
+                                    android:textSize="7sp"
+                                    tools:ignore="SmallSp,SpUsage" />
+
+                            </androidx.cardview.widget.CardView>
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </RelativeLayout>
+                    <TextView
+                        android:textSize="16sp"
+                        android:textColor="@color/dark_pray"
+                        android:layout_marginTop="15dp"
+                        android:text="@string/tap_to_view_detail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.AppBarLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/orders"
+            tools:listitem="@layout/item_order"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"
+            orderData="@{viewModel.currentListOrder}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="160dp"
+            android:layout_marginBottom="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomBar"
+            app:menu="@menu/menu_order_item"
+            app:itemRippleColor="@color/white"
+            app:itemTextColor="@color/white"
+            app:itemIconTint="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/light_green"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
+
