--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/back_ground"
-            tools:context=".uicontroler.fragment.MessageFragment">
+            >
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -194,6 +194,7 @@
                         android:layout_height="1dp"
                         android:layout_marginHorizontal="20dp"/>
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/order"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_person_button"
