--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -295,6 +295,7 @@
                     android:orientation="vertical">
 
                     <LinearLayout
+                        android:id="@+id/ln_about_us"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
