--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -192,7 +192,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="200dp">
+                android:layout_marginTop="200dp"
+                android:paddingHorizontal="20dp">
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rc_category"
                     android:layout_width="match_parent"
