--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -97,6 +97,7 @@
                     </androidx.appcompat.widget.Toolbar>
 
                     <LinearLayout
+                        android:id="@+id/ln_about_us"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
