--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -13,12 +13,19 @@
         <action
             android:id="@+id/action_homeFragment_to_detailProductFragment2"
             app:destination="@id/detailProductFragment2" />
+        <action
+            android:id="@+id/action_homeFragment_to_aboutUsFragment"
+            app:destination="@id/aboutUsFragment" />
     </fragment>
     <fragment
         tools:layout="@layout/fragment_favorite"
         android:id="@+id/favoriteFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.FavoriteFragment"
-        android:label="FavoriteFragment" />
+        android:label="FavoriteFragment" >
+        <action
+            android:id="@+id/action_favoriteFragment_to_aboutUsFragment"
+            app:destination="@id/aboutUsFragment" />
+    </fragment>
     <fragment
         tools:layout="@layout/fragment_cart"
         android:id="@+id/cartFragment"
@@ -27,12 +34,19 @@
         <action
             android:id="@+id/action_cartFragment_to_checkOutFragment"
             app:destination="@id/checkOutFragment" />
+        <action
+            android:id="@+id/action_cartFragment_to_aboutUsFragment"
+            app:destination="@id/aboutUsFragment" />
     </fragment>
     <fragment
         tools:layout="@layout/fragment_message"
         android:id="@+id/messageFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.MessageFragment"
-        android:label="MessageFragment" />
+        android:label="MessageFragment" >
+        <action
+            android:id="@+id/action_messageFragment_to_aboutUsFragment"
+            app:destination="@id/aboutUsFragment" />
+    </fragment>
     <fragment
         tools:layout="@layout/fragment_person"
         android:id="@+id/personFragment"
@@ -65,8 +79,9 @@
         android:name="com.example.aposs_buyer.uicontroler.fragment.FinishCheckOutFragment"
         android:label="fragment_finish_check_out"
         tools:layout="@layout/fragment_finish_check_out" >
-        <action
-            android:id="@+id/action_finishCheckOutFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/aboutUsFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.AboutUsFragment"
+        android:label="AboutUsFragment" />
 </navigation>
